# ai-cockpit-action-demo

./: Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: create-release.yaml  pr-build.yaml
ai_cockpit_action_demo/: config.py  executor.py  main.py  models.py  raspi_config.py
ai_cockpit_action_demo/raspi_executor/: raspi_executor.py
data/: action_mapping.json
helm/ai-cockpit-action-demo/: Chart.yaml  testvalues.yaml  values.yaml
helm/ai-cockpit-action-demo/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
helm/ai-cockpit-action-demo/templates/tests/: test-connection.yaml
static/: index.html
static/lib/: main.js
