[tool.poetry]
name = "ai-cockpit-action-demo"
version = "0.1.0"
description = ""
authors = ["ztarbug <kronprinzfriedrich@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
fastapi-code-generator = "^0.5.2"
uvicorn = { extras = ["standard"], version = "^0.34.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"